appId: "com.rupeek.customer.debug"
---
- launchApp
- assertVisible: "Get Started"
- tapOn: "Get Started"
- assertVisible: "Terms & Policies"
- assertVisible: "Accept All & Continue"
- tapOn: "Accept All & Continue"

- assertVisible: "Enter your Mobile Number*"
- inputText: "7900385322"
- tapOn: "Continue"
- assertVisible: "Enter OTP"




