appId: "com.rupeek.customer.debug"
---
- assertVisible:
    id: "com.rupeek.customer.debug:id/personal_loan_img"
- tapOn:
    id: "com.rupeek.customer.debug:id/personal_loan_img"


- assertVisible: "Available Balance"
- assertVisible: "Borrow"
- assertVisible: "Limit Utilized"
- assertVisible: "Upcoming EMIs"
# - assertVisible: "Pay Now"
- assertVisible: "Transactions"


- runFlow: "PL_flow_2.yaml"




# curl --location --request POST 'https://quick-qa.rupeek.co/loan-applications/e673f4c3-42bf-4946-a4e8-4a8ca7ad732d/fund-transfer-callback' \
# --header 'Authorization: JWT eyJhbGciOiJSUzUxMiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjVmMWViYzQzNjIzZGQyZGEyZTQ4NDU0MiIsInNlc3Npb25JZCI6Ijc2OWU5YmFjLTFkOWItNDUzNC1hNjFiLWI0MDgxNTRiNGUyOSIsImp0aSI6IjVmNjA0MTUzLThkNTMtNDY5Zi05ODI1LTYyZTk1M2VhZmJlZiIsImlhdCI6MTc2NjM4NDgwOSwiZXhwIjoxNzk3OTIwODA5LCJhdWQiOiJydXBlZWsuY29tIiwiaXNzIjoicnVwZWVrLmNvbSJ9.Wm7zKzAX6MUKG4Qhp0QT9CCTHge6Hx3nZyhH6BNknWrI9rMEcqslAwSrk5H3qNbg0QWuEUVHFuBr4n3FktttOU5KiDcsiBbnq93fe-xNHuUFFo0YPc46qIB6ZyzXzC64gkLdZwG_a4_SgzWrwWKQvVGWjjtt9l-xrgpyz9-49WxGBFj0aOfTTLexEEAc13x_zRDRR6_lVhtAadBw5abM9ppETd6NJAaUvhRJIqjpEfz_Z8iHOZv7ZN3kkJm2Z04k51PU-tPE8ydMtW-pco7GSZPYBsmqorQaNfRcyLNpA0AIROzL2-yI1IO862b2_dnkzbnKBAW_HwtrVkXzulmvvA'